First commit with all changes

--- a/src/components/about/Terminal.module.scss
+++ b/src/components/about/Terminal.module.scss
@@ -17,12 +17,15 @@ i {
 }
 
 .terminal {
-  p, li {
+  p,
+  li {
     margin: 1rem 0;
+    line-height: 1.5;
     color: $white;
   }
 
-  a, a:visited {
+  a,
+  a:visited {
     animation: changeColors 3s infinite;
     font-weight: bold;
   }
